--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -18,24 +18,16 @@
 \title{Instance-Based Parameter Tuning\\
 for Evolutionary AI Planning}
 
-\author{ M{\'a}ty{\'a}s Brendel \inst{1} \and Marc Schoenauer \inst{2}}
-\authorrunning{M. Brendel \and M. Schoenauer}
 
- %       \affaddr{Projet TAO, INRIA Saclay \& LRI}\\
- %       \affaddr{Universit{\'e} Paris Sud}\\
- %       \affaddr{Orsay, France}\\
- %       \email{matthias.brendel@lri.fr}
- %\alignauthor
-
-\institute{Projet TAO, INRIA Saclay \& LRI \\ 
-\email{matthias.brendel@lri.fr}  \and Projet TAO, INRIA Saclay \& LRI \\ \email{marc.schoenauer@inria.fr}}
+%\author{ M{\'a}ty{\'a}s Brendel \inst{1} \and Marc Schoenauer \inst{2}}
+%\authorrunning{M. Brendel \and M. Schoenauer}
 
 
- %       \affaddr{Projet TAO, INRIA Saclay \& LRI}\\
- %       \affaddr{Universit{\'e} Paris Sud}\\
- %       \affaddr{Orsay, France}\\
- %       \email{marc.schoenauer@inria.fr}
- %}
+
+%\institute{Projet TAO, INRIA Saclay \& LRI \\ 
+%\email{matthias.brendel@lri.fr}  \and Projet TAO, INRIA Saclay \& LRI \\ \email{marc.schoenauer@inria.fr}}
+
+
 
 \date{February 9, 2011}
 \maketitle
